--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "electron-store": "^11.0.2",
+    "framer-motion": "^12.23.26",
     "music-metadata": "^11.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
